# ghactions-demo

./: LICENSE  README.rst  pyproject.toml
.github/workflows/: test.yml
mylib/: __init__.py
