[tool.poetry]
name = "mylib"
version = "0.1.0"
description = ""
authors = ["Michael duPont <flyinactor91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "*"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """\
    --cov mylib \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.black]
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.mypy]
